Fix overflow issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,4 @@
 html, body {
-  height: 100%;
 }
 
 body {
@@ -47,6 +46,7 @@ body {
   text-align: center;
   height: 100%;
   width: 100%;
+  height: 720px;
 }
 
 #header-text {
@@ -107,11 +107,10 @@ body {
 }
 
 #contact-info {
-  text-align: left;
-  justify-content: left;
-  position: relative;
-  left: 50%;
-  margin-left: -115px;
+  text-align: justify;
+  list-style: none;
+  margin: 0 auto;
+  width: 300px;
 }
 
 #contact-info span {
@@ -196,10 +195,6 @@ footer {
 }
 
 @media only screen and (max-width:769px) {
-  html, body {
-    overflow-x: hidden;
-  }
-
   .navbar {
     background: transparent;
   }
